# agent-sdk

./: .gitignore  AGENTS.md  Makefile  README.md  native-responses.md  profile_switch_demo_runner.py  tracking.md
.agents/skills/: code-review.md  custom-codereview-guide.md
.beads/: issues.jsonl
.github/run-eval/: ADDINGMODEL.md  resolve_model_config.py
.github/scripts/: check_documented_examples.py  check_sdk_api_breakage.py
.github/workflows/: README-RELEASE.md  api-breakage.yml  assign-reviews.yml  create-release.yml  integration-runner.yml  pr-review-by-openhands.yml  pypi-release.yml  release-binaries.yml  run-eval.yml  server.yml  tests.yml  version-bump-prs.yml
.openhands/: TASKS.md
.openhands/microagents/: repo.md  vscode.md
.openhands/skills/: code-review.md
.pr/: test_browser_crash_recovery.py
docs/: architecture-overview.md  architecture.md  llm_profiles.md  llm_runtime_switch_investigation.md  llm_runtime_switch_plan.md  llm_switching.md  responses-api.md
docs/design/: llm-model-info-and-caps.md  llm-refactor.md  (+1 more)
examples/: 10_reasoning_debug.py  6_interactive_terminal.py  README.md  echo_offline.py  hello_world.py  persistence_local.py  tools_quickstart.py
openhands/: __init__.py
openhands-agent-server/: pyproject.toml
openhands-sdk/: pyproject.toml
openhands-tools/: pyproject.toml
openhands-workspace/: README.md  pyproject.toml
openhands-workspace/openhands/workspace/: __init__.py
openhands-workspace/openhands/workspace/daytona/: __init__.py  workspace.py
scripts/: worktree.sh
tests/: test_model_features.py
(+238 files in other folders)
