[project]
name = "openhands-workspace"
version = "1.7.3"
description = "OpenHands Workspace - Docker and container-based workspace implementations"

requires-python = ">=3.12"
dependencies = [
    "openhands-sdk",
    "openhands-agent-server",
    "pydantic>=2.11.7",
]

[project.optional-dependencies]
# Optional dependency for DaytonaWorkspace
# Install with: `pip install openhands-workspace[daytona]`
daytona = ["daytona>=0.128.1"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["openhands.workspace*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["py.typed"]
